# jiosaavn-api-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  retype.yml  shuttle.yml
api/: [...404].rs  home.rs  modules.rs
api/album/: details.rs  recommend.rs  same_year.rs
api/artist/: details.rs  recommend.rs  songs_albums.rs
api/playlist/: details.rs  recommend.rs
api/radio/: [path].rs  songs.rs
api/song/: details.rs  recommend.rs
docs/: index.md  lyrics.md  modules.md  package.json  pnpm-lock.yaml  radio.md  retype.manifest  retype.yml
docs/details/: album.md  artist.md  playlist.md  songs.md
docs/search/: albums.md  all.md  artists.md  playlists.md  songs.md  top.md
public/: index.html
src/: config.rs  lib.rs  main.rs  utils.rs
src/handlers/: album_handler.rs  artist_handler.rs  home_handler.rs  lyrics_handler.rs  mod.rs  modules_handler.rs  not_found_handler.rs  playlist_handler.rs  radio_handler.rs  search_handler.rs  song_handler.rs
src/models/: album.rs  artist.rs  get.rs  lyrics.rs  misc.rs  mod.rs  modules.rs  playlist.rs  quality.rs  radio.rs  response.rs  search.rs  song.rs
src/payloads/: album_paylaod.rs  artist_payload.rs  get_payload.rs  mod.rs  modules_payload.rs  modules_playlaod.rs  playlist_payload.rs  radio_payload.rs  search_payload.rs  song_payload.rs
src/services/: album_service.rs  api_service.rs  artist_service.rs  home_service.rs  lyrics_service.rs  mod.rs  module_service.rs  playlist_service.rs  radio_service.rs  search_service.rs  song_service.rs
