[package]
name = "jiosaavn"
version = "0.1.0"
edition = "2021"
description = "A simple wrapper for JioSaavn API"
authors = ["Hemant Rajput <68769346+rajput-hemant@users.noreply.github.com>"]

default-run = "jiosaavn"

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
dotenv = "0.15.0"
openssl = "0.10.64"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["serde_json", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
vercel_runtime = "1.1.1"

# home 
[[bin]]
name = "home"
path = "api/home.rs"

# modules
[[bin]]
name = "modules"
path = "api/modules.rs"

# song
[[bin]]
name = "song_details"
path = "api/song/details.rs"

[[bin]]
name = "song_reco"
path = "api/song/recommend.rs"

# album
[[bin]]
name = "album_details"
path = "api/album/details.rs"

[[bin]]
name = "album_reco"
path = "api/album/recommend.rs"

[[bin]]
name = "album_same_year"
path = "api/album/same_year.rs"

# playlist
[[bin]]
name = "playlist_details"
path = "api/playlist/details.rs"

[[bin]]
name = "playlist_reco"
path = "api/playlist/recommend.rs"

# artist
[[bin]]
name = "artist_details"
path = "api/artist/details.rs"

[[bin]]
name = "artist_reco"
path = "api/artist/recommend.rs"

[[bin]]
name = "artist_songs_albums"
path = "api/artist/songs_albums.rs"

# radio
[[bin]]
name = "create_radio"
path = "api/radio/[path].rs"

[[bin]]
name = "radio_songs"
path = "api/radio/songs.rs"

# not found
[[bin]]
name = "not_found"
path = "api/[...404].rs"
